--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   logger: ^2.6.2
   http: ^1.6.0
+  firebase_core: ^4.4.0
+  cloud_firestore: ^6.1.2
+  firebase_auth: ^6.1.4
 
 dev_dependencies:
   flutter_test:
