--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   cloud_firestore: ^6.1.2
   firebase_auth: ^6.1.4
   firebase_crashlytics: ^5.0.7
+  riverpod: ^3.2.1
+  flutter_riverpod: ^3.2.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
